// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`elements/content-sidebar/SidebarAccessStats should not render the component when there are no access stats 1`] = `""`;

exports[`elements/content-sidebar/SidebarAccessStats should render an error 1`] = `
<SidebarSection
  className=""
  isOpen={true}
>
  <ErrorMask
    errorHeader={
      <FormattedMessage
        defaultMessage="baz"
        description="bar"
        id="foo"
      />
    }
  />
</SidebarSection>
`;

exports[`elements/content-sidebar/SidebarAccessStats should render the component when access stats are zero (newly uploaded file) 1`] = `
<SidebarSection
  className=""
  interactionTarget="accessstats"
  isOpen={true}
  title={
    <FormattedMessage
      defaultMessage="Access Stats"
      id="be.sidebarAccessStats"
    />
  }
>
  <AccessStats
    commentCount={0}
    commentStatButtonProps={
      {
        "data-resin-target": "accessstats-comments",
      }
    }
    downloadCount={0}
    downloadStatButtonProps={
      {
        "data-resin-target": "accessstats-downloads",
      }
    }
    editCount={0}
    editStatButtonProps={
      {
        "data-resin-target": "accessstats-edits",
      }
    }
    isBoxNote={false}
    previewCount={0}
    previewStatButtonProps={
      {
        "data-resin-target": "accessstats-previews",
      }
    }
    viewMoreButtonProps={
      {
        "data-resin-target": "accessstats-viewdetails",
      }
    }
    viewStatButtonProps={
      {
        "data-resin-target": "accessstats-views",
      }
    }
  />
</SidebarSection>
`;

exports[`elements/content-sidebar/SidebarAccessStats should render the component when there is at least one type of access stat 1`] = `
<SidebarSection
  className=""
  interactionTarget="accessstats"
  isOpen={true}
  title={
    <FormattedMessage
      defaultMessage="Access Stats"
      id="be.sidebarAccessStats"
    />
  }
>
  <AccessStats
    commentCount={0}
    commentStatButtonProps={
      {
        "data-resin-target": "accessstats-comments",
      }
    }
    downloadCount={0}
    downloadStatButtonProps={
      {
        "data-resin-target": "accessstats-downloads",
      }
    }
    editCount={0}
    editStatButtonProps={
      {
        "data-resin-target": "accessstats-edits",
      }
    }
    isBoxNote={false}
    previewCount={1}
    previewStatButtonProps={
      {
        "data-resin-target": "accessstats-previews",
      }
    }
    viewMoreButtonProps={
      {
        "data-resin-target": "accessstats-viewdetails",
      }
    }
    viewStatButtonProps={
      {
        "data-resin-target": "accessstats-views",
      }
    }
  />
</SidebarSection>
`;
